Msg Flickering resolved and Vanilla tilt Effect added

--- a/frontend/app/components/FrontLogo/Front.css
+++ b/frontend/app/components/FrontLogo/Front.css
@@ -1,4 +1,5 @@
 .msgBox {    
+    visibility: hidden;
     overflow: hidden;
     padding: 2.5rem;
     color: #f3f4f6;
